# i100007

./: .coverage  .gitignore  MANIFEST.in  README.md  build.py  config.json  config.toml  pyproject.toml  requirements.txt  setup.py  test.py
src/cli/: app.py
src/core/: __init__.py  config.py  core_module_a.py  core_module_b.py
src/drivers/: ina236.py
src/manufacturing_client/: __init__.py  mfclient.py
src/pymodule/: .gitignore  __init__.py  hellocyth.pyx
src/pymodule/c_ext/cmodulea/: cmodulea.c
src/pymodule/cli/: app.py
src/pymodule/core/: __init__.py  app_runner.py  benchmark.py  config.py  core_module_a.py  core_module_b.py
src/pymodule/cyth/: __init__.py  worker.pyx
src/pymodule/drivers/: ina236.py
src/pymodule/extensions/hello_world/: hello_world.c
src/pymodule/extensions/worker/: worker.c
src/pymodule/logger/: __init__.py  logger_module.py
src/pymodule/utils/: __init__.py  utilities.py
src/tests/: __init__.py  test_1.py
src/utils/: __init__.py  utilities.py
tests/core/: test_config.py  test_core_module_a.py  test_core_module_b.py
tests/utils/: test_utilities.py
