[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pymodule"
version = "0.1.0"
description = "Python module skeleton (please rename)"
readme = { text = """This is a multi-line basic string.
It allows for special characters such as \n for newlines and " for quotes.""", content-type = "text/plain" }
requires-python = ">=3.6"

# Author information using a literal single-quoted email and basic double-quoted name
authors = [
    { name = "Ivan Cenov", email = "ivan.cenov@rnd.bg" }
]
maintainers = [
    { name = "Ivan Cenov", email = "ivan.cenov@rnd.bg" }
]

# Dependencies
dependencies = [
    "numpy",
    "importlib",
    "paho-mqtt",
    "jsonschema",
    "rfc3986",
    "tomli; python_version < '3.11'"
]

# Optional dependencies section for development tools
[project.optional-dependencies]
dev = [
    "pytest>=8.0.0"
]

# Defining various URLs (these UTL are examples, please add other urls and/or remove redundant ones.
[project.urls]
homepage = "https://pymodule.example.com"  # Literal string for homepage URL
repository = "http://github.com/username/pymodule.git"  # Basic string for repository URL
documentation = "https://pymodule.readthedocs.io"
bug_tracker = "https://github.com/username/pymodule/issues"
changelog = "https://github.com/username/pymodule/releases"
ci_pipeline = "https://github.com/username/pymodule/actions"
funding = "https://github.com/sponsors/username"
faq = "https://pymodule.example.com/faq"  # Custom URL key for FAQ

# Example custom configuration for `setuptools`
[tool.setuptools]
package-dir = {"" = "src"}  # Single-quoted key for directory name

[tool.setuptools.packages.find]
where = ["src"]

# Entry point for the CLI script
[project.scripts]
pymodule = "pymodule.cli.app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

