[tool.poetry]
name = "pymodule"
version = "0.1.0"
description = "A sample project driven by poetry, using C and Cython extensions"
authors = ["Ivan Cenov <i_cenov@botevgrad.com>"]
readme = "README.md"
packages = [{include = "pymodule", from = "src"}]
# Additional files that shuld be added to sdist and wheel distributions.
include = [
    "pyproject.toml",
    "build.py",
    "MANIFEST.in",
    "README.md",
    "src/pymodule/cyth/*",
    "src/pymodule/c_ext/cmodulea/*",
    "src/pymodule/c_ext/cmoduleb/*"
]  # Compiled extensions

# Runtime dependencies
[tool.poetry.dependencies]
python = ">=3.12"
cython = ">=3.0"
setuptools = ">=68.0.0"
tomli = { version = "*", markers = "python_version < '3.11'" }
numpy = "*"
importlib = "*"
paho-mqtt = "*"
jsonschema = "*"
rfc3986 = "*"

# Development dependencies
[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"  # Static type checker
pathlib = ">=1.0"

# Test dependencies
[tool.poetry.group.test.dependencies]
pytest = ">=8.0.0"
pytest-cov = ">=6.0.0"
pytest-mock = ">=3.0.0"

# CLI entry points
[tool.poetry.scripts]
pymodule = "pymodule.cli.app:main"

# Path definitions, specific for this project.
[tool.build.config]
# path where Cython extensions live, each extension in one .pix file
cython_path = "src/pymodule/cyth"
# path where C extensions live, each extension in its own subdirectory, that can contain multiple `.c` files and subdirectories.
c_ext_path = "src/pymodule/c_ext"
# directories wher C extensions can search for C header files
include_dirs = ["src/pymodule/include", "src/include"]

[build-system]
requires = ["poetry-core", "setuptools", "Cython"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
generate-setup-file = true
script = 'build.py'

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = "src"
